src/styles/layout/_assigned_layout.sass
#assigned
  align-items: start
  display: grid
  grid-column: 1 / 3
  grid-template-rows: 64px calc(100% - 80px)
  height: 100%

  > .header
    align-items: center
    align-self: stretch
    display: grid
    grid-column-gap: $gutter * 12
    grid-template-columns: 1fr auto auto
    justify-items: end

    .column-icon
      width: 20px

  > .content
    display: grid
    grid-template-rows: auto 1fr
    height: 100%
    padding: $gutter * 12 0

    > div:nth-child(2)
      overflow-x: auto

    .assgin-tabs
      display: grid
      grid-auto-flow: column
      grid-column-gap: $gutter * 8
      justify-content: start
      padding: 0 $gutter * 8

      .tab
        display: grid
        padding: $gutter * 12
        position: relative

        .counter
          bottom: 30px
          padding: $gutter * 2
          position: absolute
          right: -5px

    .table-box
      align-items: start
      box-sizing: border-box
      display: grid
      height: 100%
      max-height: calc(100vh - 113px)
      overflow: auto

      .table
        border-collapse: collapse
        table-layout: fixed

        .content
          .row
            .cell
              white-space: nowrap

        .header,
        .content
          .row
            height: 40px

            &.selected
              position: relative

            .cell
              box-sizing: border-box
              padding: 0 $gutter * 8
              position: relative

              &.id
                max-width: 60px
                min-width: 60px

              &.name
                max-width: 210px
                min-width: 210px
                text-align: left

                .title-container
                  justify-content: start

              &.tempo
                max-width: 85px
                min-width: 85px

              &.type
                max-width: 85px
                min-width: 85px

              &.time-card
                max-width: 110px
                min-width: 110px

              &.my-start
                max-width: 100px
                min-width: 100px

              &.my-target
                max-width: 100px
                min-width: 100px

              &.hours-worked
                max-width: 93px
                min-width: 93px

              &.project
                max-width: 100px
                min-width: 100px
                text-align: left

                .title-container
                  justify-content: start

              &.priority
                max-width: 100px
                min-width: 100px

              &.phase
                max-width: 110px
                min-width: 110px
                text-align: left

                .title-container
                  justify-content: start

              .tooltip
                position: absolute

          &.header
            .cell
              .title-container
                display: grid
                grid-column-gap: $gutter * 8
                justify-content: center
                       
              &.active-sorting
                .title-container
                  align-items: center
                  grid-column-gap: $gutter * 8
                  grid-template-columns: auto 10px
                  justify-content: center

                  .icon
                    display: grid

          &.content
            .cell
              overflow: hidden
              text-align: center

              &.title,
              &.project,
              &.phase
                text-align: left

              &.tempo
                .tempo-card
                  padding: $gutter * 4 0
                  width: 80px

        &.newly-assigned
          .header,
          .content
            .row
              .cell
                &.id
                  max-width: 60px
                  min-width: 60px
                  width: 60px

                &.name
                  max-width: 210px
                  min-width: 210px
                  text-align: left
                  width: 210px

                  .title-container
                    justify-content: start

                &.tempo
                  max-width: 85px
                  min-width: 85px
                  width: 85px

                &.type
                  max-width: 85px
                  min-width: 85px
                  width: 85px

                &.project
                  max-width: 110px
                  min-width: 110px
                  text-align: left
                  width: 110px

                  .title-container
                    justify-content: start

                &.priority
                  max-width: 100px
                  min-width: 100px
                  width: 100px

                &.phase
                  text-align: left

                  .title-container
                    justify-content: start
                    padding-left: 22.5px

        &.need-estimate-items
          .header,
          .content
            .row
              .cell
                &.id
                  max-width: 60px
                  min-width: 60px
                  width: 60px

                &.name
                  max-width: 210px
                  min-width: 210px
                  text-align: left
                  width: 210px

                  .title-container
                    justify-content: start

                &.tempo
                  max-width: 85px
                  min-width: 85px
                  width: 85px

                &.type
                  max-width: 85px
                  min-width: 85px
                  width: 85px

                &.project
                  max-width: 110px
                  min-width: 110px
                  text-align: left
                  width: 110px

                  .title-container
                    justify-content: start

                &.priority
                  max-width: 100px
                  min-width: 100px
                  width: 100px

                &.phase
                  max-width: 100px
                  min-width: 100px
                  text-align: left
                  width: 100px

                  .title-container
                    justify-content: start

                &.response-time
                  max-width: 270px
                  min-width: 270px
                  width: 270px

        &.upcoming-items
          .header,
          .content
            .row
              .cell
                &.id
                  max-width: 60px
                  min-width: 60px

                &.name
                  max-width: 210px
                  min-width: 210px
                  text-align: left

                  .title-container
                    justify-content: start

                &.tempo
                  max-width: 85px
                  min-width: 85px

                &.type
                  max-width: 85px
                  min-width: 85px

                &.starts-in
                  max-width: 110px
                  min-width: 110px

                &.my-start
                  max-width: 100px
                  min-width: 100px

                &.my-target
                  max-width: 100px
                  min-width: 100px

                &.hours-worked
                  max-width: 93px
                  min-width: 93px

                &.project
                  max-width: 100px
                  min-width: 100px
                  text-align: left

                  .title-container
                    justify-content: start

                &.priority
                  max-width: 100px
                  min-width: 100px

                &.phase
                  max-width: 110px
                  min-width: 110px
                  text-align: left

                  .title-container
                    justify-content: start

